--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <div class="topnav">
@@ -13,32 +15,57 @@
   <img src="../assets/img/beachdark.jpg" alt="beachdark" style="width: 100%;">
   <div class="text">
       <h1 style="font-size: 80px;">Discover<br>A new Place</h1>
+      <br>
+      <br>
+      <br>
       <p style="font-size: 20px;">Travel to the any corner of the world, without going<br>around in circles</p>
-      <strong style="font-size: 20px;">FIND YOUR HOLIDAY!
+      <br>
+      <br>
+      <strong style="font-size: 20px;">FIND YOUR HOLIDAY
       </strong>
       <br>
-      <strong style="font-size: 15px; font-style: italic;"> Please select: -<br>1. Your Destination of travel<br>2. The Date you Want to Depart
-        <br>3. The Date you Want to Return<br>4. The Number of Guests</strong>
-      <div class="dropdown">
-        <br>
-        <br>
-        <select style="height: 46px;">
-          <option value="0">Italy - Rome</option>
-          <option value="1">France - Paris</option>
-          <option value="2">China - Beijing</option>
-        </select>
-        <input style="height: 46px; width: 270px;" id="date" type="date" name="departdate">
-        <input style="height: 46px; width: 270px;" id="arrdate" type="date" name="arrivaldate">
-        <select style="height: 46px;">
-          <option value="0">1 Guest</option>
-          <option value="1">2 Guests</option>
-          <option value="2">3 Guests</option>
-          <option value="2">4 Guests</option>
-        </select>
-        <button type="button" class="btn btn-warning" style="height: 46px; width: 210px;color: white; background-color: orange;">Search</button>
+      <br>
+      <br>
+        <table style="font-family: Arial, Helvetica, sans-serif;">
+          <tr>
+            <th style="text-align: center;">Destination</th>
+            <th style="text-align: center;">Departure Date</th>
+            <th style="text-align: center;">Return Date</th>
+            <th style="text-align: center;">Number of Guests</th>
+          </tr>
+          <tr>
+            <td style="width: 20%;">
+              <div class="dropdown">
+              <select style="height: 46px;">
+                <option value="0">Italy - Rome</option>
+                <option value="1">France - Paris</option>
+                <option value="2">China - Beijing</option>
+              </select>
+            </div>
+            </td>
+            <td style="width: 20%;">
+              <input style="height: 46px; width: 270px; color: black;" id="date" type="date" name="departdate">
+            </td>
+            <td style="width: 20%;">
+              <input style="height: 46px; width: 270px; color: black;" id="arrdate" type="date" name="arrivaldate">
+            </td>
+            <td style="width: 20%;">
+              <div class="dropdown">
+                <select style="height: 46px;">
+                  <option value="0">1 Guest</option>
+                  <option value="1">2 Guests</option>
+                  <option value="2">3 Guests</option>
+                  <option value="2">4 Guests</option>
+                </select>
+              </div>
+            </td>
+            <td style="width: 20%;">
+              <button type="button" class="btn btn-warning" style="height: 50px; width: 222px;color: white; background-color: orange;">Search</button>
+            </td>
+          </tr>
+        </table>
       </div>
       </div>
-  </div>
   <br>
   <div style="text-align: center;">
     <video width="640" height="480" controls>
@@ -50,7 +77,7 @@
     <br>
     <p style="color: grey; text-align: center; font-family: Arial, Helvetica, sans-serif;">Welcome to Travel Me 360</p>
     <h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 60px;">The Best Travel Agency</h1>
-    <p style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; text-align: justify;">As a country blessed with incomparable natural charm, as well a rich cultural heritage spanning nearly 3 millennia, Sri Lanka possesses immense potential for inbound tourism.
+    <p style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; text-align: justify; padding-left: 235px; width: 80%;">As a country blessed with incomparable natural charm, as well a rich cultural heritage spanning nearly 3 millennia, Sri Lanka possesses immense potential for inbound tourism.
 
       With a view to tapping this lucrative segment, Traveller Global Destinations & Leisure Holidays (Pvt) Ltd was
       incorporated in 2002, as a subsidiary of The Traveller Global (Pvt) Ltd. Our parent company was formed by
@@ -73,21 +100,21 @@
     Here below you will find the popular destination that we offer</p>
       <br>
       <div class="container">
-        <img src="../assets/img/rome.jpg" alt="Italy" class="image" style="height: 261px;">
+        <img src="../assets/img/rome.jpg" alt="Italy" class="img-rounded" style="height: 261px;">
         <div class="middle">
           <div class="texts">Rome (Italy)</div>
         </div>
       </div>
 
       <div class="container">
-        <img src="../assets/img/paris.jpg" alt="France" class="image" style="height: 261px;">
+        <img src="../assets/img/paris.jpg" alt="France" class="img-rounded" style="height: 261px;">
         <div class="middle">
           <div class="texts">Paris (France)</div>
         </div>
       </div>
 
       <div class="container">
-        <img src="../assets/img/beijing.jpg" alt="China" class="image" style="height: 261px;">
+        <img src="../assets/img/beijing.jpg" alt="China" class="img-rounded" style="height: 261px;">
         <div class="middle">
           <div class="texts">Beijing (China)</div>
         </div>
@@ -102,42 +129,37 @@
     <br>
     <table style="font-family: Arial, Helvetica, sans-serif;">
       <tr>
-        <td><img src="../assets/img/newyork.jpg" alt="USA" class="image" style="height: 200px; width: 400px;"></td>
-        <td style="width: 100px;"><strong style="font-size: 20px;">United States</strong></td>
-        <td style="width: 100px;"><p style="font-size: 20px;">3/5</p></td>
+        <td><img src="../assets/img/newyork.jpg" alt="USA" class="img-rounded" style="height: 200px; width: 400px;"></td>
+        <td style="width: 100px;"><strong style="font-size: 20px;">New York (United States)</strong></td>
+        <td style="width: 100px;"><img src="../assets/img/starpic.PNG" alt="starpic"></td>
         <td><p>The United States of America (USA), commonly known as the United States (U.S. or US) or America, is a
           country consisting of 50 states, a federal district, five major self-governing territories, and various possessions.
           [g] At 3.8 million square miles (9.8 million km2), it is the world's third- or fourth-largest country by total area.[c]
-          Most of the country is located in central North America between the countries of Canada and Mexico. With an estimated population
-          of over 328 million, the U.S. is the third most populous country in the world. The capital is Washington, D.C.,
-           and the most populous city is New York City.</p></td>
-           <td><button type="button" class="btn btn-warning" style="height: 50px; width: 200px;color: white; background-color: orange;">View Details</button></td>
+          </p></td>
+           <td style="width: 100px;"><strong style="font-size: 20px;">$300</strong></td>
+           <td><button type="button" class="btn btn-primary" style="height: 50px; width: 200px;">View Details</button></td>
       </tr>
       <tr>
-        <td><img src="../assets/img/zurich.jpg" alt="Switzerland" class="image" style="height: 200px; width: 400px;"></td>
-        <td style="width: 100px;"><strong style="font-size: 20px;">Switzerland</strong></td>
-        <td style="width: 100px;"><p style="font-size: 20px;">5/5</p></td>
+        <td><img src="../assets/img/zurich.jpg" alt="Switzerland" class="img-rounded" style="height: 200px; width: 400px;"></td>
+        <td style="width: 100px;"><strong style="font-size: 20px; padding-left: 10px;">Zurich (Switzerland)</strong></td>
+        <td style="width: 100px;"><img src="../assets/img/starpic.PNG" alt="starpic"></td>
         <td><p>Switzerland, officially the Swiss Confederation, is a country situated in the confluence of Western,
           Central, and Southern Europe.[10][note 4] It is a federal republic composed of 26 cantons, with federal
           authorities based in Bern.[1][2][note 1] Switzerland is a landlocked country bordered by Italy to the south,
-          France to the west, Germany to the north, and Austria and Liechtenstein to the east. It is geographically
-          divided among the Swiss Plateau, the Alps, and the Jura, spanning a total area of 41,285 km2 (15,940 sq mi),
-          and land area of 39,997 km2 (15,443 sq mi). While the Alps occupy the greater part of the territory,
-          the Swiss population of approximately 8.5 million is concentrated mostly on the plateau,
-          where the largest cities are located, among them the two global cities and economic centres of Zurich and Geneva.</p></td>
-           <td><button type="button" class="btn btn-warning" style="height: 50px; width: 200px;color: white; background-color: orange;">View Details</button></td>
+          France to the west, Germany to the north, and Austria and Liechtenstein to the east.</p></td>
+          <td style="width: 100px;"><strong style="font-size: 20px;">$400</strong></td>
+           <td><button type="button" class="btn btn-primary" style="height: 50px; width: 200px;">View Details</button></td>
       </tr>
       <tr>
-        <td><img src="../assets/img/toronto.jpg" alt="Canada" class="image" style="height: 200px; width: 400px;"></td>
-        <td style="width: 100px;"><strong style="font-size: 20px;">Canada</strong></td>
-        <td style="width: 100px;"><p style="font-size: 20px;">5/5</p></td>
+        <td><img src="../assets/img/toronto.jpg" alt="Canada" class="img-rounded" style="height: 200px; width: 400px;"></td>
+        <td style="width: 100px;"><strong style="font-size: 20px;">Toronto (Canada)</strong></td>
+        <td style="width: 100px;"><img src="../assets/img/starpic.PNG" alt="starpic"></td>
         <td><p>Canada is a country in the northern part of North America. Its ten provinces and three territories
           extend from the Atlantic to the Pacific and northward into the Arctic Ocean, covering 9.98 million square
           kilometres (3.85 million square miles), making it the world's second-largest country by total area.
-          Its southern border with the United States, stretching 8,891 kilometres (5,525 mi), is the world's
-          longest bi-national land border. Canada's capital is Ottawa,
-          and its three largest metropolitan areas are Toronto, Montreal, and Vancouver.</p></td>
-           <td><button type="button" class="btn btn-warning" style="height: 50px; width: 200px; color: white; background-color: orange;">View Details</button></td>
+        </p></td>
+          <td style="width: 100px;"><strong style="font-size: 20px;">$500</strong></td>
+          <td><button type="button" class="btn btn-primary" style="height: 50px; width: 200px;">View Details</button></td>
       </tr>
     </table>
 </div>
@@ -147,9 +169,9 @@
   <h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 60px;">Feedback</h1>
   <table style="font-family: Arial, Helvetica, sans-serif;">
     <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Feedback</th>
+      <th style="text-align: center;">Name</th>
+      <th style="text-align: center;">Email</th>
+      <th style="text-align: center;">Feedback</th>
     </tr>
     <tr *ngFor="let com of lstmodels">
       <td style="width: 33.33%;">{{com.name}}</td>
@@ -164,19 +186,19 @@
   <h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 60px;">Latest Stories</h1>
   <div class="therow">
     <div class="thecolumn">
-      <img src="../assets/img/travelpic1.jpg" alt="travelpic1" style="height: 261px;text-align: left;width: 400px;">
+      <img src="../assets/img/travelpic1.jpg" alt="travelpic1" class="img-rounded" style="height: 261px;text-align: left;">
       <p style="color: grey; text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 15px;">
         Apr 2 2020</p>
         <h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 25px;">Live with no excuses and travel with no regrets</h1>
     </div>
     <div class="thecolumn">
-      <img src="../assets/img/travelpic2.jpg" alt="travelpic2" style="height: 261px;">
+      <img src="../assets/img/travelpic2.jpg" alt="travelpic2" class="img-rounded" style="height: 261px;">
       <p style="color: grey; text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 15px;">
         Apr 9 2020</p>
         <h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 25px;">We travel not to escape life but for life not to escape us</h1>
     </div>
     <div class="thecolumn">
-      <img src="../assets/img/travelpic3.jpg" alt="travelpic3" style="height: 261px;width: 400px;">
+      <img src="../assets/img/travelpic3.jpg" alt="travelpic3" class="img-rounded" style="height: 261px;">
       <p style="color: grey; text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 15px;">
         Apr 14 2020</p>
         <h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 25px;">People don't take trips, trips take people</h1>
@@ -190,13 +212,13 @@
   <p style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 20px;">
     Please enter a valid email address to subscribe to our newsletter</p>
     <input type="email" placeholder="Enter email address" style="width: 400px; height: 40px;" />
-    <button type="button" class="btn btn-warning" style="height: 40px; width: 200px; color: black; background-color: white; border: 1px solid black;">Subscribe</button>
+    <button type="button" class="btn btn-success" style="height: 45px; width: 200px;">Subscribe</button>
 </div>
 <br>
 <br>
 <div style="background-color: black; color: white; font-family: Arial, Helvetica, sans-serif;">
   <div class="therow" style="background-color: black; color: white; font-family: Arial, Helvetica, sans-serif;">
-    <img src="../assets/img/downpic.PNG" alt="downpic" style="width: 100%;">
+    <img src="../assets/img/downpic.PNG" alt="downpic" class="img-rounded" style="width: 100%;">
     <div class="thecolumns" style="width: 20%;">
       <h1 style="font-size: 20px;">Travel Me 360</h1>
       <br>
@@ -233,20 +255,20 @@
       <br>
       <p style="font-size: 15px;">1313 ABC, Anaheim,<br>San Fransisco, California, USA<br><br>
         +23 511 165 456<br><br>info@travelme360.com<br></p>
-      <img src="../assets/img/socialicon.png" alt="socialicon" style="height: 100px; width: 100px;">
+      <img src="../assets/img/socialicon.png" alt="socialicon" class="img-rounded" style="height: 100px; width: 100px;">
     </div>
     <div class="thecolumns" style="padding-left: 100px;">
       <h1 style="font-size: 20px;">We Support</h1>
       <br>
-      <img src="../assets/img/supportpic.jpg" alt="wesupport" style="height: 200px; width: 300px;">
+      <img src="../assets/img/supportpic.jpg" alt="wesupport" class="img-rounded" style="height: 200px; width: 300px;">
     </div>
   </div>
-  <p style="text-align: center;">__________________________________________________________________________________________________________</p>
+  <p style="text-align: center;">_______________________________________________________________________________________________________________________________</p>
   <br>
     <div style="background-color: black; color: white; font-family: Arial, Helvetica, sans-serif;">
     <div class="therow" style="background-color: black; color: white; font-family: Arial, Helvetica, sans-serif;">
       <div class="thecolumn" style="padding-left: 210px;">
-        <a style="font-size: 13px;">2020 Travel Me 360. All Right Reserved</a>
+        <p style="font-size: 13px;">2020 Travel Me 360. All Right Reserved</p>
       </div>
       <div class="thecolumn" style="padding-left: 190px;">
         <a style="font-size: 13px; color: white;" href="">Privacy & Terms</a>
