--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,7 +37,7 @@
   margin: 0 auto;
   left: 0;
   right: 100%;
-  top: 0; /* Adjust this value to move the positioned div up and down */
+  top: 6%; /* Adjust this value to move the positioned div up and down */
   text-align: left;
   width: 100%; /* Set the width of the positioned div */
   color: white;
@@ -66,7 +66,7 @@ label {
   float: left;
 }
 
-.image {
+.img-rounded {
   opacity: 1;
   display: block;
   width: 100%;
@@ -86,7 +86,7 @@ label {
   text-align: center;
 }
 
-.container:hover .image {
+.container:hover .img-rounded {
   opacity: 0.3;
 }
 
