--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -102,7 +102,8 @@ label {
 }
 table {
   border-collapse: collapse;
-  width: 100%;
+  width: auto;
+  align-content: center;
 }
 
 table, td, th {
@@ -130,4 +131,13 @@ table, td, th {
   content: "";
   clear: both;
   display: table;
+}
+
+html,
+body {
+    min-height: 100%;
+    height: 100%;
+    width: auto;
+    padding: 0;
+    margin: 0;
 }
