--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -86,6 +86,7 @@ label {
   text-align: center;
 }
 
+
 .container:hover .img-rounded {
   opacity: 0.3;
 }
@@ -118,6 +119,10 @@ table, td, th {
   float: left;
   width: 33.33%;
   padding: 5px;
+}
+
+.thecolumn:hover .img-rounded {
+  opacity: 0.3;
 }
 
 .thecolumns {
